--- a/src/resources/msg.properties
+++ b/src/resources/msg.properties
@@ -15,3 +15,46 @@ pageCosts.chooseArrivalLocality=Choose arrival
 pageCosts.calcCosts=Calculate&nbsp;shipping&nbsp;cost
 units.kg=kg 
 units.cm=cm
+pageLogin.registerLink="Register new user"
+pageLogin.goHomePage="Go homepage"
+register.registerTitle=Register a new user
+register.registerHead=Register a new user
+register.name=Your name
+register.login=Your login
+register.password=Your password
+register.repeatPass="Repeat password"
+register.submit="Send..."
+pageLogin.buttonSubmit="Send"
+index.title=Modern Delivery Service
+index.header=Modern Delivery Service
+index.linkCostCalc=Calculate delivery cost
+pageCosts.calculateCostTitle=Delivery cost calculation
+pageCosts.calculationCosts=Cost calculation
+pageCosts.data=Initial data
+pageCosts.route=Route
+pageCosts.distance=Distance
+pageCosts.expectedDuration=Expected duration
+pageCosts.weight=Weight
+pageCosts.volumeWeight=Volume weight
+pageCosts.usedWeight=Used weight
+pageCosts.paperwork=Paperwork
+pageCosts.targetReceipt=Targeted receipt
+pageCosts.interCityCost=Intercity delivery
+pageCosts.targetDelivery=Targeted delivery
+pageCosts.insuranceCost=Insurance
+pageCosts.totalMoney=Total
+pageCosts.shippingRate=Shipping rate
+pageCosts.targetReceiptDist=Targeted receipt distance
+pageCosts.targetDeliveryDist=Targeted delivery distance
+pageCosts.insuranceWorth=Insurance worth
+pageCosts.insuranceRate=Insurance rate
+pageCosts.oneMoreCalculation=One more calculation
+pageCosts.makeOrder=Make order
+pageMakeOrder.titleMakeOrder=Make Order
+makeOrder.headerMakeOrder=Make Order
+makeOrder.PressToGoToCabinet=Press to go to cabinet
+makeOrder.msgPlsRegBeforeMakeOrder=Register before making order
+makeOrder.msgInstrAfterRegister=Choose action resume order after register
+makeOrder.msgGoRegister=Register
+makeOrder.msgOrLogin=Login
+
