--- a/src/resources/manager.properties
+++ b/src/resources/manager.properties
@@ -23,6 +23,8 @@ pageCrInv.Fare=Fare
 pageCrInv.Status=Status
 pageCrInv.Mark=Mark
 pageCrInv.Date=Date
+pageCrInv.noNewShippings=No new shippings
+prg.shippingsFinishedOk=Shippings are finished
 prg.invoiceOk=Invoices is created
 prg.paymentOk=Payment inserted
 prg.goBack=Go back
@@ -30,3 +32,19 @@ managerCabinet.title=Manager cabinet
 managerCabinet.headerCabinet=Manager cabinet
 managerCabinet.createInvoices=Create invoices
 managerCabinet.addPayments=Add payments
+managerCabinet.finishShipping=Finish shippings
+finishShippings.title=Finish shippings
+finishShippings.header=Finish shippings
+finishShippings.Date=Date
+finishShippings.Person=Person
+finishShippings.Load=Load
+finishShippings.Unload=Unload
+finishShippings.Fare=Fare
+finishShippings.Status=Ststus
+finishShippings.Mark=Mark
+finishShippings.noNewShippings=No shippings
+finishShippings.finishShippings=Finish shippings
+finishShippings.prevPage=Prev
+finishShippings.nextPage=Next
+common.goCabinet=Go cabinet
+common.linkLogout=Logout
