All functionality implemented

--- a/src/resources/root.properties
+++ b/src/resources/root.properties
@@ -32,3 +32,20 @@ units.cm=cm
 units.kg=kg
 pageCosts.calcCosts=Calculate price
 root.footer=Be happy with MDS!
+root.next=Next
+root.prev=Prev
+pageTariffs.tariffsArchive=Archive of tariffs
+pageTariffs.sortIncr=Ascending
+pageTariffs.sortDecr=Descending
+pageTariffs.filtLogConf=Logistic config number
+pageTariffs.someApplySortFilt=Apply sorting and filtering params
+pageTariffs.date=Date
+pageTariffs.LogConf=LogConfig
+pageTariffs.TruckVel=Av.truck velocity(km/h)
+pageTariffs.Density=Density (t/m3)
+pageTariffs.Paper=Paperwork (UAH)
+pageTariffs.TargRec=Targeted receipt (km)
+pageTariffs.TargDel=Targeted delivery (km)
+pageTariffs.ShRate=Shipping rate (UAH/(100km*1kg))
+pageTariffs.InsW=Insurance weight worth (UAH/1kg) 
+pageTariffs.InsR=Insurance rate
