--- a/src/resources/user.properties
+++ b/src/resources/user.properties
@@ -40,3 +40,5 @@ invoicesUser.Pay=Pay invoice
 common.prevPage=Previous
 common.nextPage=Next
 invoicesUser.noInvoices=No unpaid invoices
+prg.goBack=Go back
+prg.spendingOk=Invoice has been paid
